# adaptive_teaching

./: .gitignore  pyproject.toml  run_fractions.py
scripts/: run_fractions.sh
src/: exp_configs.py  gpt.py
src/programs/: exp_configs.py
src/programs/fractions/: teacher.py
src/verbs/: exp_configs.py
