[project]
name = "adaptive-teaching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
